--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -14,6 +14,38 @@
       padding-bottom: {{ section.settings.padding_bottom }}px;
     }
   }
+
+  .multicolumn-card{
+    background-color:#F0F0EA;
+  }
+
+  .multicolumn-list{
+    grid-col-gap:40px !important;
+  }
+
+  @media screen and (max-width: 750px) {
+    .multicolumn{
+      padding: 5rem 0;
+    }
+  }
+  @media screen and (min-width: 990px) {
+    .grid {
+      flex-wrap: nowrap !important;
+    }
+  }
+@media screen and (min-width: 750px) {
+   
+     .multicolumn-width {
+      max-width: 140rem;
+      margin: 0 auto;
+      padding: 0 6rem;
+    } 
+
+    .multicolumn{
+      padding: 12rem 0;
+    }
+  }
+  
 {%- endstyle -%}
 
 {%- liquid
@@ -25,7 +57,7 @@
 -%}
 
 <div class="multicolumn color-{{ section.settings.color_scheme }} gradient{% unless section.settings.background_style == 'none' and settings.text_boxes_border_thickness > 0 or settings.text_boxes_shadow_opacity > 0 %} background-{{ section.settings.background_style }}{% endunless %}{% if section.settings.title == blank %} no-heading{% endif %}">
-  <div class="page-width section-{{ section.id }}-padding isolate">
+  <div class="multicolumn-width section-{{ section.id }}-padding isolate">
     {%- unless section.settings.title == blank -%}
       <div class="title-wrapper-with-link title-wrapper--self-padded-mobile title-wrapper--no-top-margin">
         <h2 class="title {{ section.settings.heading_size }}">
