Implement styling to image-with-text-components.

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -17,6 +17,12 @@
 {%- style -%}
   .footer {
     margin-top: {{ section.settings.margin_top | times: 0.75 | round: 0 }}px;
+    background-color: #2D5A4F;
+    color:white;
+  }
+
+  .footer-block__heading {
+    color: white;
   }
 
   .section-{{ section.id }}-padding {
