--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -15,12 +15,8 @@
     }
   }
 
-  .multicolumn-card{
-    background-color:#F0F0EA;
-  }
-
-  .multicolumn-list{
-    grid-col-gap:40px !important;
+  .multicolumn-card__info {
+    background-color:#F0F0EA ;
   }
 
   @media screen and (max-width: 750px) {
