--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -282,22 +282,12 @@
     },
     {
       "type": "range",
-      "id": "margin_top",
-      "min": 0,
-      "max": 100,
-      "step": 4,
-      "unit": "px",
-      "label": "t:sections.all.margin.margin_top",
-      "default": 36
-    },
-    {
-      "type": "range",
       "id": "margin_bottom",
       "min": 0,
       "max": 100,
       "step": 4,
       "unit": "px",
-      "label": "t:sections.all.margin.margin_bottom",
+      "label": "Margin bottom",
       "default": 36
     }
   ],
