--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -14,11 +14,13 @@
   }
 
   .section-{{ section.id }}-margin {
+    margin-top: {{ section.settings.margin_top | times: 0.75 | round: 0 }}px;
     margin-bottom: {{ section.settings.margin_bottom | times: 0.75 | round: 0 }}px;
   }
 
   @media screen and (min-width: 750px) {
     .section-{{ section.id }}-margin {
+      margin-top: {{ section.settings.margin_top }}px;
       margin-bottom: {{ section.settings.margin_bottom }}px;
     }
   }
@@ -287,8 +289,18 @@
       "max": 100,
       "step": 4,
       "unit": "px",
-      "label": "Margin bottom",
-      "default": 36
+      "label": "Bottom margin",
+      "default": 100
+    }
+    {
+      "type": "range",
+      "id": "margin_top",
+      "min": 0,
+      "max": 100,
+      "step": 4,
+      "unit": "px",
+      "label": "Top margin",
+      "default": 0
     }
   ],
   "blocks": [
