--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -334,6 +334,26 @@
           ],
           "default": "h1",
           "label": "t:sections.all.heading_size.label"
+        },
+        {
+          "type": "select",
+          "id": "heading_color",
+          "options": [
+            {
+              "value": "red",
+              "label": "Heading Color"
+            },
+            {
+              "value": "white",
+              "label": "Heading Color"
+            },
+            {
+              "value": "black",
+              "label": "Heading Color"
+            }
+          ],
+          "default": "white",
+          "label": "Heading Color"
         }
       ]
     },
