WIP - Fix the label

--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -340,19 +340,19 @@
           "id": "heading_color",
           "options": [
             {
-              "value": "red",
-              "label": "Heading Color"
+              "value": "color-1",
+              "label": "red"
             },
             {
-              "value": "white",
-              "label": "Heading Color"
+              "value": "color-2",
+              "label": "white"
             },
             {
-              "value": "black",
-              "label": "Heading Color"
+              "value": "color-3",
+              "label": "black"
             }
           ],
-          "default": "white",
+          "default": "color-2",
           "label": "Heading Color"
         }
       ]
