--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -193,8 +193,10 @@
     .multicolumn-list:not(.slider)
     .center
     .multicolumn-card__info {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
   }
 }
 
