--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -25,12 +25,12 @@
     }
   }
 
-  @media screen and (max-width: 750px) {
+  /* @media screen and (max-width: 750px) {
     .pr-image-size {
      width: 100%;
      height: 100%;
     }
-  }
+  } */
 {%- endstyle -%}
 
 <div class="image-with-text pf-bg-{{ section.settings.color_scheme }} image-with-text--{{ section.settings.content_layout }} image-with-text-width isolate{% if settings.text_boxes_border_thickness > 0 and settings.text_boxes_border_opacity > 0 and settings.media_border_thickness > 0 and settings.media_border_opacity > 0 %} collapse-borders{% endif %}{% unless section.settings.color_scheme == 'background-1' and settings.media_border_thickness > 0 and settings.text_boxes_shadow_opacity == 0 and settings.text_boxes_border_thickness == 0 or settings.text_boxes_border_opacity == 0 %} collapse-corners{% endunless %} section-{{ section.id }}-margin section-{{ section.id }}-padding">
@@ -52,6 +52,8 @@
             sizes="(min-width: {{ settings.page_width }}px) {{ settings.page_width | minus: 100 | divided_by: 2 }}px, (min-width: 750px) calc((100vw - 130px) / 2), calc((100vw - 50px) / 2)"
             alt="{{ section.settings.image.alt | escape }}"
             loading="lazy"
+            width="{{ section.settings.image.width }}"
+            height="{{ section.settings.image.height }}"
           >
         {%- else -%}
           {{ 'image' | placeholder_svg_tag: 'placeholder-svg' }}
