--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -221,9 +221,9 @@
 }
 
 .multicolumn-card__info .link {
-  text-decoration: none;
+  /* text-decoration: none; */
   font-size: inherit;
-  margin-top: 1.5rem;
+  /* margin-top: 1.5rem; */
 }
 
 .multicolumn-card__info .icon-wrap {
