WIP - inline button

--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -93,13 +93,16 @@
         {%- if section.settings.button_label != blank and show_mobile_slider -%}
           <a href="{{ section.settings.button_link }}" class="link underlined-link large-up-hide">{{ section.settings.button_label | escape }}</a>
         {%- endif -%}
+
+        {%- if section.settings.inline_button_text != blank-%}
         <div class="inline-button">
           <a href="/collections" class="inline">Bekijk volledige collectie</a>
           <div>
             <span class="icon-wrap">&nbsp;{% render 'icon-arrow-green' %}</span>
           </div>
         </div>
-    
+      {%- endif -%}
+
       </div>
     {%- endunless -%}
     <slider-component class="slider-mobile-gutter">
