--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -40,6 +40,15 @@
       padding-bottom: {{ section.settings.padding_bottom }}px;
     }
   }
+  .footer-block:first-child > h2{
+    font-size: 3rem;
+  }
+
+@media screen and (min-width: 750px) {
+  .footer-block:first-child > h2 {
+    font-size: 5rem;
+  }
+}
 {%- endstyle -%}
 
 <footer class="footer color-{{ section.settings.color_scheme }} gradient section-{{ section.id }}-padding">
