--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -7,7 +7,7 @@
 }
 
 .footer__content-top {
-  padding-bottom: 5rem;
+  padding-bottom: 3rem;
   display: block;
 }
 
@@ -42,7 +42,7 @@
 
 .footer__content-bottom {
   border-top: solid 0.1rem rgba(var(--color-foreground), 0.08);
-  padding-top: 3rem;
+  /* padding-top: 3rem; */
 }
 
 .footer__content-bottom:only-child {
@@ -70,12 +70,12 @@
 }
 
 .footer__localization:empty + .footer__column--info {
-  align-items: center;
+  /* align-items: center; */
 }
 
 @media screen and (max-width: 749px) {
   .footer__localization:empty + .footer__column {
-    padding-top: 1.5rem;
+    /* padding-top: 1.5rem; */
   }
 }
 .footer__column {
@@ -85,8 +85,8 @@
 
 .footer__column--info {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  /* flex-direction: column; */
+  /* justify-content: center; */
   align-items: center;
   padding-left: 2rem;
   padding-right: 2rem;
@@ -96,7 +96,7 @@
   .footer__column--info {
     padding-left: 0;
     padding-right: 0;
-    align-items: flex-end;
+    align-items: flex-start;
   }
 }
 
@@ -369,6 +369,7 @@ noscript .localization-selector.link {
 .footer__copyright {
   text-align: center;
   margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 @media screen and (min-width: 750px) {
@@ -413,7 +414,8 @@ noscript .localization-selector.link {
 
 .footer-block__details-content .list-menu__item--link,
 .copyright__content a {
-  color: rgba(var(--color-foreground), 0.75);
+  /* color: rgba(var(--color-foreground), 0.75); */
+  color: white;
 }
 
 .footer-block__details-content .list-menu__item--active {
