--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -420,13 +420,15 @@ noscript .localization-selector.link {
 
 .footer-block__details-content .list-menu__item--active {
   transition: text-decoration-thickness var(--duration-short) ease;
-  color: rgb(var(--color-foreground));
+  /* color: rgb(var(--color-foreground)); */
+  color: #abd6ca;
 }
 
 @media screen and (min-width: 750px) {
   .footer-block__details-content .list-menu__item--link:hover,
   .copyright__content a:hover {
-    color: rgb(var(--color-foreground));
+    /* color: rgb(var(--color-foreground)); */
+    color: #abd6ca;
     text-decoration: underline;
     text-underline-offset: 0.3rem;
   }
