WIP- change the width of grid system in image with text component.

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -36,7 +36,7 @@
     }
 
     .section-{{ section.id }}-padding {
-      x-padding-top: {{ section.settings.padding_top }}px;
+      padding-top: {{ section.settings.padding_top }}px;
       x-padding-bottom: {{ section.settings.padding_bottom }}px;
     }
   }
