--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -345,7 +345,7 @@
  
  .image-with-text-width {
   /* max-width: 140rem; */
-  margin: 0 auto;
+  /* margin: 0 auto; */
   /* padding: 0 6rem; */
 } 
 
