Add select options for image background color.

--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -235,6 +235,26 @@
       "label": "t:sections.all.colors.label"
     },
     {
+      "type": "select",
+      "id": "image_background_color",
+      "options": [
+        {
+          "value": "img_bg_color-1",
+          "label": "White"
+        },
+        {
+          "value": "img_bg_color-2",
+          "label": "Green"
+        },
+        {
+          "value": "img_bg_color-3",
+          "label": "Beige"
+        }
+      ],
+      "default": "img_bg_color-1",
+      "label": "Image background color"
+    },
+    {
       "type": "header",
       "content": "Mobile layout"
     },
