WIP - Add color settings.

--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -452,6 +452,22 @@
           ],
           "default": "body",
           "label": "t:sections.image-with-text.blocks.text.settings.text_style.label"
+        },
+        {
+          "type": "select",
+          "id": "text_color",
+          "options": [
+            {
+              "value": "text_color-1",
+              "label": "White"
+            },
+            {
+              "value": "text_color-2",
+              "label": "Black"
+            }
+          ],
+          "default": "text_color-1",
+          "label": "Text color"
         }
       ]
     },
