Remove unnecessary class that gives a color to image background.

--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -370,10 +370,10 @@
   flex-direction: column;
   justify-content: center !important;
 }
-
+/* 
 .pf-bg-background-1 .image-with-text__grid {
   background-color: #F0F0EA;
-}
+} */
 
 .pf-bg-background-1 .image-with-text__text-item {
   background-color: #2D5A4F;
