WIP -  inline button for image-with-text component.

--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -509,6 +509,24 @@
           "label": "Button Color"
         }
       ]
+    }, 
+    {
+      "type": "link",
+      "name": "t:sections.image-with-text.blocks.link.name",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "text",
+          "id": "text",
+          "default": "Text",
+          "label": "Inline button label"
+        },
+        {
+          "type": "url",
+          "id": "url",
+          "label": "Inline button url"
+        }
+      ]
     }
   ],
   "presets": [
