Add new icon and change text color for inline-button.

--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -33,7 +33,7 @@
 }
 .inline {
     font-size: 18px;
-    color:#2D5A4F !important;
+    color:#FFFFFF !important;
     font-weight: 600;
     padding-right: 10px;
   }
@@ -105,7 +105,7 @@
           <div class="inline-button">
             <a href="{{ section.settings.button_link }}" class="inline">{{ section.settings.inline_button_text | escape }}</a>
             <div>
-              <span class="icon-wrap">&nbsp;{% render 'icon-arrow-green' %}</span>
+              <span class="icon-wrap">&nbsp;{% render 'icon-arrow-white' %}</span>
             </div>
           </div>
         {%- endif -%}
