--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -31,11 +31,14 @@
     width: 100%;
   }
 }
-.inline {
+.inline-button-text {
     font-size: 18px;
-    color:#FFFFFF !important;
+    color:white !important;
     font-weight: 600;
     padding-right: 10px;
+    text-decoration: underline;
+    text-decoration-color: #ABD6CA;
+    text-decoration-thickness: 2px;
   }
 
   .inline-button {
@@ -44,6 +47,7 @@
     justify-content: center;
     align-items: center;
   }
+  
   /* @media screen and (max-width: 750px) {
     .pr-image-size {
      width: 100%;
@@ -103,7 +107,7 @@
         {%- endfor -%}
         {%- if section.settings.inline_button_text != blank-%}
           <div class="inline-button">
-            <a href="{{ section.settings.button_link }}" class="inline">{{ section.settings.inline_button_text | escape }}</a>
+            <a href="{{ section.settings.button_link }}" class="inline-button-text">{{ section.settings.inline_button_text | escape }}</a>
             <div>
               <span class="icon-wrap">&nbsp;{% render 'icon-arrow-white' %}</span>
             </div>
