--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -17,9 +17,9 @@
     }
   }
 
-  .inline-button-text {
-    font-size: 18px;
-    color:white !important;
+  .inline-button-text-style {
+    font-size: 15px;
+    color:#2D5A4F !important;
     font-weight: 600;
     padding-right: 10px;
     text-decoration: underline;
@@ -27,10 +27,9 @@
     text-decoration-thickness: 2px;
   }
 
-  .inline-button {
+  .inline-button-style {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
   }
 {%- endstyle -%}
@@ -61,8 +60,8 @@
         {%- endcase -%}
       {%- endfor -%}
       {%- if section.settings.inline_button_text != blank-%}
-        <div class="inline-button">
-          <a href="{{ section.settings.button_link }}" class="inline-button-text">{{ section.settings.inline_button_text | escape }}</a>
+        <div class="inline-button-style">
+          <a href="{{ section.settings.button_link }}" class="inline-button-text-style">{{ section.settings.inline_button_text | escape }}</a>
           <div>
             <span class="icon-wrap">&nbsp;{% render 'icon-arrow-green' %}</span>
           </div>
