--- a/sections/custom-liquid.liquid
+++ b/sections/custom-liquid.liquid
@@ -11,12 +11,16 @@
   }
 }
 
+ .wrapper{
+  padding: 0 6rem;
+} 
 
-.wrapper{
-  display:flex;
-  flex-direction: column;
-  align-items: center;
+@media screen and (max-width: 750px) {
+  .wrapper {
+  padding: 0 1rem;
+  } 
 }
+
 .tab{
   cursor: pointer;
   color: black;
@@ -28,13 +32,14 @@
 }
 .panels{
   background:#fffffff6;
-  box-shadow: 0 2rem 2rem #00000080;
+  box-shadow: 0 0.1rem 1rem #00000080;
   min-height:200px;
   width:100%;
-  max-width:500px;
+  /* max-width:500px; */
   border-radius:3px;
   overflow:hidden;
   padding:20px;  
+  border-top: 1px solid #E4E4E7;
 }
 .panel{
   display:none;
