Change padding and remove shadow.

--- a/sections/custom-liquid.liquid
+++ b/sections/custom-liquid.liquid
@@ -12,12 +12,12 @@
 }
 
  .wrapper{
-  padding: 0 6rem;
+  padding: 0 20rem;
 } 
 
 @media screen and (max-width: 750px) {
   .wrapper {
-  padding: 0 1rem;
+  padding: 0 1.5rem;
   } 
 }
 
@@ -32,7 +32,7 @@
 }
 .panels{
   background:#fffffff6;
-  box-shadow: 0 0.1rem 1rem #00000080;
+  /* box-shadow: 0 0.1rem 1rem #00000080; */
   min-height:200px;
   width:100%;
   /* max-width:500px; */
@@ -40,6 +40,9 @@
   overflow:hidden;
   padding:20px;  
   border-top: 1px solid #E4E4E7;
+  border-right: 1px solid #DFDFDF;
+  border-bottom: 1px solid #DFDFDF;
+  border-left: 1px solid #DFDFDF;
 }
 .panel{
   display:none;
