Custom fonts are added.

--- a/snippets/custom-fonts.liquid
+++ b/snippets/custom-fonts.liquid
@@ -1,10 +1,21 @@
 <style>
   @font-face {
   font-family: "soehne";
-  src: url('soehne-leicht-woff2') format("woff2"),
-       url('soehne-halbfett-woff2') format("woff2"),
-       url('soehne-buch-woff2') format("woff2");
-   }
+  src: url('/assets/soehne-leicht.woff2') format("woff2");
+  font-weight: 200;
+  }
+
+  @font-face {
+    font-family: "soehne";
+    src: url('/assets/soehne-halbfett.woff2') format("woff2");
+    font-weight: 700;
+    }
+
+  @font-face {
+      font-family: "soehne";
+      src: url('/assets/soehne-buch.woff2') format("woff2");
+      font-weight: 400;
+      }
 
   h1,h2,h3,h4,h5,h6,html,body,*,[id] *{
   font-family: "soehne" !important;
