--- a/snippets/custom-fonts.liquid
+++ b/snippets/custom-fonts.liquid
@@ -19,5 +19,9 @@
 
   h1,h2,h3,h4,h5,h6,html,body,*,[id] *{
   font-family: "soehne" !important;
-}
+  } 
+
+  h2 {
+  font-weight:200 !important;
+  }
   </style>
