--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -186,7 +186,8 @@
         line-height: calc(1 + 0.8 / var(--font-body-scale));
         font-family: var(--font-body-family);
         font-style: var(--font-body-style);
-        font-weight: var(--font-body-weight);
+        /* font-weight: var(--font-body-weight); */
+        font-weight: 200;
       }
 
       @media screen and (min-width: 750px) {
