change font url's.

--- a/snippets/custom-fonts.liquid
+++ b/snippets/custom-fonts.liquid
@@ -1,19 +1,19 @@
 <style>
   @font-face {
   font-family: "soehne";
-  src: url('/assets/soehne-leicht.woff2') format("woff2");
+  src: url('https://cdn.shopify.com/s/files/1/0654/3989/1669/files/soehne-leicht.woff2?v=1661774471') format("woff2");
   font-weight: 200;
   }
 
   @font-face {
     font-family: "soehne";
-    src: url('/assets/soehne-halbfett.woff2') format("woff2");
+    src: url('https://cdn.shopify.com/s/files/1/0654/3989/1669/files/soehne-halbfett.woff2?v=1661774471') format("woff2");
     font-weight: 700;
     }
 
   @font-face {
       font-family: "soehne";
-      src: url('/assets/soehne-buch.woff2') format("woff2");
+      src: url('https://cdn.shopify.com/s/files/1/0654/3989/1669/files/soehne-buch.woff2?v=1661774472') format("woff2");
       font-weight: 400;
       }
 
