--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -1,7 +1,21 @@
 {{ 'component-card.css' | asset_url | stylesheet_tag }}
 {{ 'section-collection-list.css' | asset_url | stylesheet_tag }}
 
-<div class="page-width">
+{%- style -%}
+
+.pf-pb {
+  padding-bottom: 5rem;
+}
+
+@media screen and (max-width: 750px) {
+  .pf-pb {
+  padding-bottom: 1.5rem;
+  }
+}
+
+{%- endstyle -%}
+
+<div class="page-width pf-pb">
   <h1 class="title title--primary">{{ section.settings.title | escape }}</h1>
   {%- liquid
     case section.settings.sort
