Update navigation bar font-weights and apply red color to the text of discounted section.

--- a/sections/custom-liquid.liquid
+++ b/sections/custom-liquid.liquid
@@ -31,7 +31,7 @@
   /* box-shadow: 0 0.5rem 0.8rem #00000080; */
 }
 .panels{
-  background:#fffffff6;
+  background-color: #ffffff;
   /* box-shadow: 0 0.1rem 1rem #00000080; */
   min-height:200px;
   width:100%;
@@ -71,9 +71,10 @@
 #one:checked ~ .tabs #one-tab,
 #two:checked ~ .tabs #two-tab,
 #three:checked ~ .tabs #three-tab{
-  background:#fffffff6;
+  background-color: #ffffff;
   color:#2D5A4F;
   border-bottom: 3px solid #ABD6CA;
+  font-weight: 700;
 }
 {%- endstyle -%}
 <div class="color-{{ section.settings.color_scheme }} gradient">
