--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -80,6 +80,15 @@
       padding-top: 0.5rem;
     }
   }
+
+  ul.list-menu li:last-child span{
+    color:#DE4747;
+    font-weight:400;
+  }
+
+  ul.list-menu {
+    font-weight:400;
+  }
 </style>
 
 {%- style -%}
