Add text decoration to multicolumn component inline button.

--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -49,6 +49,9 @@
     color:#2D5A4F !important;
     font-weight: 600;
     padding-right: 10px;
+    text-decoration: underline;
+    text-decoration-color: #ABD6CA;
+    text-decoration-thickness: 2px;
   }
 
   .inline-button {
