--- a/assets/base.css
+++ b/assets/base.css
@@ -2959,3 +2959,7 @@ details-disclosure > details {
     outline: transparent solid 1px;
   }
 }
+
+#shopify-section-template--16316329394389__1659344709611fcddc {
+  margin-bottom: 60px;
+}
