--- a/sections/custom-liquid.liquid
+++ b/sections/custom-liquid.liquid
@@ -12,7 +12,9 @@
 }
 
  .wrapper{
-  padding: 0 20rem;
+  padding: 0 5rem;
+  max-width: var(--page-width);
+  margin: 0 auto;
 } 
 
 @media screen and (max-width: 750px) {
