--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -23,14 +23,15 @@
 .card--card,
 .card--standard .card__inner {
   border-radius: var(--card-corner-radius);
-  border: var(--card-border-width) solid rgba(var(--color-foreground), var(--card-border-opacity));
+  border: var(--card-border-width) solid
+    rgba(var(--color-foreground), var(--card-border-opacity));
   position: relative;
   box-sizing: border-box;
 }
 
 .card--card:after,
 .card--standard .card__inner:after {
-  content: '';
+  content: "";
   position: absolute;
   width: calc(var(--card-border-width) * 2 + 100%);
   height: calc(var(--card-border-width) * 2 + 100%);
@@ -38,14 +39,19 @@
   left: calc(var(--card-border-width) * -1);
   z-index: -1;
   border-radius: var(--card-corner-radius);
-  box-shadow: var(--card-shadow-horizontal-offset) var(--card-shadow-vertical-offset) var(--card-shadow-blur-radius) rgba(var(--color-shadow), var(--card-shadow-opacity));
+  box-shadow: var(--card-shadow-horizontal-offset)
+    var(--card-shadow-vertical-offset) var(--card-shadow-blur-radius)
+    rgba(var(--color-shadow), var(--card-shadow-opacity));
 }
 
 .card .card__inner .card__media {
   overflow: hidden;
   /* Fix for Safari border bug on hover */
   z-index: 0;
-  border-radius: calc(var(--card-corner-radius) - var(--card-border-width) - var(--card-image-padding));
+  border-radius: calc(
+    var(--card-corner-radius) - var(--card-border-width) -
+      var(--card-image-padding)
+  );
 }
 
 .card--card .card__inner .card__media {
@@ -92,23 +98,24 @@
 
 .card__content {
   display: grid;
-  grid-template-rows: minmax(0,1fr) max-content minmax(0,1fr);
-  padding: 1rem;
+  grid-template-rows: minmax(0, 1fr) max-content minmax(0, 1fr);
+  /* padding: 1rem; */
   width: 100%;
   flex-grow: 1;
 }
 
 .card__content--auto-margins {
-  grid-template-rows: minmax(0,auto) max-content minmax(0,auto);
+  grid-template-rows: minmax(0, auto) max-content minmax(0, auto);
 }
 
 .card__information {
   grid-row-start: 2;
-  padding: 1.3rem 1rem;
+  padding: 2.3rem 2.3rem;
+  background-color: #f0f0ea;
 }
 
 .card:not(.ratio) > .card__content {
-  grid-template-rows: max-content minmax(0,1fr) max-content auto;
+  grid-template-rows: max-content minmax(0, 1fr) max-content auto;
 }
 
 @media screen and (min-width: 750px) {
@@ -184,12 +191,14 @@
 }
 
 .card__heading a:focus:after {
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)), 0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
+  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),
+    0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
   outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
 }
 
 .card__heading a:focus-visible:after {
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)), 0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
+  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),
+    0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
   outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
 }
 
@@ -298,9 +307,7 @@
   margin-top: 0.4rem;
 }
 
-.card-information
-  > *:not(.visually-hidden:first-child)
-  + *:not(.rating) {
+.card-information > *:not(.visually-hidden:first-child) + *:not(.rating) {
   margin-top: 0.7rem;
 }
 
