Add padding to featured product item.

--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -21,6 +21,11 @@
   .pf-background-secondary{
     background-color: #F0F0EA;
   }
+
+  .product__info-wrapper{
+    padding: 1rem;
+  }
+
 {%- endstyle -%}
 
 <link rel="stylesheet" href="{{ 'component-deferred-media.css' | asset_url }}" media="print" onload="this.media='all'">
