--- a/assets/section-featured-product.css
+++ b/assets/section-featured-product.css
@@ -52,12 +52,14 @@
 }
 
 @media screen and (min-width: 990px) {
-  .background-secondary .featured-product:not(.product--no-media) > .product__info-wrapper {
+  .background-secondary
+    .featured-product:not(.product--no-media)
+    > .product__info-wrapper {
     padding: 0 0 0 5rem;
   }
 
   .featured-product:not(.product--no-media) > .product__info-wrapper {
-    padding: 0 7rem;
+    padding: 1.5rem 7rem;
   }
 
   .background-secondary .featured-product {
