--- a/assets/base.css
+++ b/assets/base.css
@@ -1315,6 +1315,7 @@ button.shopify-payment-button__button--unbranded {
   cursor: pointer;
   font: inherit;
   font-size: 1.5rem;
+  font-weight: 400;
   text-decoration: none;
   color: rgb(var(--color-button-text));
   transition: box-shadow var(--duration-short) ease;
