--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -72,7 +72,8 @@
             {% endif %}
             placeholder="{{ 'templates.contact.form.email' | t }}"
           >
-          <label class="field__label" for="ContactForm-email">{{ 'templates.contact.form.email' | t }} <span aria-hidden="true">*</span></label>
+          {% comment %} <label class="field__label" for="ContactForm-email">{{ 'templates.contact.form.email' | t }} <span aria-hidden="true">*</span></label> {% endcomment %}
+          <label class="field__label" for="ContactForm-email"> E-mail <span aria-hidden="true">*</span></label>
           {%- if form.errors contains 'email' -%}
             <small class="contact__field-error" id="ContactForm-email-error">
               <span class="visually-hidden">{{ 'accessibility.error' | t }}</span>
