--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -19,7 +19,7 @@
 
   .inline-button-text-style {
     font-size: 15px;
-    color:#2D5A4F !important;
+    /* color:#2D5A4F !important; */
     font-weight: 600;
     padding-right: 10px;
     text-decoration: underline;
@@ -61,7 +61,7 @@
       {%- endfor -%}
       {%- if section.settings.inline_button_text != blank-%}
         <div class="inline-button-style">
-          <a href="{{ section.settings.button_link }}" class="inline-button-text-style">{{ section.settings.inline_button_text | escape }}</a>
+          <a href="{{ section.settings.button_link }}" class="pf-{{ section.settings.inline_button_text_color}}">{{ section.settings.inline_button_text | escape }}</a>
           <div>
             <span class="icon-wrap">&nbsp;{% render 'icon-arrow-green' %}</span>
           </div>
@@ -156,6 +156,26 @@
       "id": "inline_button_link",
       "label": "Inline button link"
     },
+    {
+      "type": "select",
+      "id": "inline_button_text_color",
+      "options": [
+        {
+          "value": "inline_button_text-1",
+          "label": "Green"
+        },
+        {
+          "value": "inline_button_text-2",
+          "label": "White"
+        },
+        {
+          "value": "inline_button_text-3",
+          "label": "Black"
+        }
+      ],
+      "default": "inline_button_text-1",
+      "label": "Inline buttton text color"
+  },
     {
       "type": "range",
       "id": "padding_top",
