--- a/assets/collage.css
+++ b/assets/collage.css
@@ -29,7 +29,8 @@
 .collage-card {
   background: rgb(var(--color-background));
   border-radius: var(--card-corner-radius);
-  border: var(--card-border-width) solid rgba(var(--color-foreground), var(--card-border-opacity));
+  border: var(--card-border-width) solid
+    rgba(var(--color-foreground), var(--card-border-opacity));
   height: 100%;
   padding: var(--card-image-padding);
   position: relative;
@@ -37,8 +38,10 @@
 
 .collage-card:after {
   border-radius: var(--card-corner-radius);
-  box-shadow: var(--card-shadow-horizontal-offset) var(--card-shadow-vertical-offset) var(--card-shadow-blur-radius) rgba(var(--color-shadow), var(--card-shadow-opacity));
-  content: '';
+  box-shadow: var(--card-shadow-horizontal-offset)
+    var(--card-shadow-vertical-offset) var(--card-shadow-blur-radius)
+    rgba(var(--color-shadow), var(--card-shadow-opacity));
+  content: "";
   position: absolute;
   width: calc(var(--card-border-width) * 2 + 100%);
   height: calc(var(--card-border-width) * 2 + 100%);
@@ -48,7 +51,10 @@
 }
 
 .collage-card .media {
-  border-radius: calc(var(--card-corner-radius) - var(--card-border-width) - var(--card-image-padding));
+  border-radius: calc(
+    var(--card-corner-radius) - var(--card-border-width) -
+      var(--card-image-padding)
+  );
   height: 100%;
   overflow: hidden;
 }
@@ -80,12 +86,14 @@
 }
 
 .collage-card .deferred-media__poster:focus:after {
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)), 0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
+  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),
+    0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
   outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
 }
 
 .collage-card .deferred-media__poster:focus-visible:after {
-  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)), 0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
+  box-shadow: 0 0 0 0.3rem rgb(var(--color-background)),
+    0 0 0.5rem 0.4rem rgba(var(--color-foreground), 0.3);
   outline: 0.2rem solid rgba(var(--color-foreground), 0.5);
 }
 
@@ -115,4 +123,5 @@
 .collage .link {
   display: flex;
   gap: 1rem;
+  align-items: center;
 }
