--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -285,6 +285,7 @@
 
 .image-with-text__content > * + * {
   margin-top: 2rem;
+  margin-right: 2rem;
 }
 
 .image-with-text__content > .image-with-text__text:empty ~ a {
