--- a/sections/collage.liquid
+++ b/sections/collage.liquid
@@ -156,7 +156,7 @@
                 {%- if block.settings.button_text != blank -%}
                   {%- if block.settings.button_url != blank -%}
                     <a href="{{ block.settings.button_url }}" class="link inline-button-text-style">
-                      {{ block.settings.button_text }} {% render 'icon-arrow' %}
+                      {{ block.settings.button_text }} {% render 'icon-arrow-black' %}
                     </a>
                   {%- endif -%}
                 {%- endif -%}
